--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
+    "postinstall": "npm run build",
     "lint": "eslint src --ext .ts"
   },
   "dependencies": {
@@ -18,7 +19,6 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "uuid": "^10.0.0",
-    "zo": "^0.0.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
